--- a/templates/item-equipment-sheet.html
+++ b/templates/item-equipment-sheet.html
@@ -21,8 +21,9 @@
               <input type="text" name="data.cost" value="{{system.cost}}" data-dtype="Number"/>
             </li>
           </ul>
-          <label class="generic-label">Description</label>
-          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
+          
         </div>
 
     </section>
