--- a/templates/item-skill-sheet.html
+++ b/templates/item-skill-sheet.html
@@ -43,8 +43,8 @@
 
             {{> "systems/foundry-fe2/templates/skill-traits-section.html"}}
             
-          <label class="generic-label">Description</label>
-          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
