--- a/templates/item-spacecraftweaponvariation-sheet.html
+++ b/templates/item-spacecraftweaponvariation-sheet.html
@@ -13,8 +13,8 @@
 
           {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=system.stats isbase=true title="Variation Stats" header=true}}
 
-          <label class="generic-label">Description</label>
-          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
