--- a/templates/item-tradegood-sheet.html
+++ b/templates/item-tradegood-sheet.html
@@ -20,8 +20,8 @@
               {{/select}}
             </select> </span>
           </ul>
-          <label class="generic-label">Description</label>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
