--- a/templates/npc-sheet.html
+++ b/templates/npc-sheet.html
@@ -169,12 +169,12 @@
         <article class="flexcol">
           <h3>Description : </h3>
           <div class="form-group editor">
-            {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+            {{editor system.description target="system.description"}}
           </div>
           <hr>
           <h3>Notes : </h3>
           <div class="form-group editor">
-            {{editor system.notes target="system.notes" button=true owner=owner editable=editable}}
+            {{editor system.notes target="system.notes"}}
           </div>
           <hr>
           {{>"systems/foundry-fe2/templates/editor-notes-gm.html"}}
