--- a/templates/item-modificationoutfit-sheet.html
+++ b/templates/item-modificationoutfit-sheet.html
@@ -12,8 +12,8 @@
         <div class="tab" data-group="primary">
           {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=data.stats isbase=true title="Modification Stats" header=true}}
 
-          <label class="generic-label">Description</label>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
