--- a/templates/item-outfit-sheet.html
+++ b/templates/item-outfit-sheet.html
@@ -46,8 +46,8 @@
           {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=modification.system.stats  isfinal=false title="Modification" subtitle=modification.name}}
           {{/each}}
 
-          <label class="generic-label">Description</label>
-          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
