--- a/templates/item-research-sheet.html
+++ b/templates/item-research-sheet.html
@@ -33,8 +33,8 @@
               </select> 
             </li>
           </ul>
-          <label class="generic-label">Description</label>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
