--- a/templates/item-spacecrafttrait-sheet.html
+++ b/templates/item-spacecrafttrait-sheet.html
@@ -31,17 +31,17 @@
           <ul>
             <li class="flexrow"><label class="item-sheet-label">Requirements</label>
               <span class="small-editor item-text-long-line">
-              {{editor system.requirements target="data.requirements" button=true owner=owner editable=editable}}
+              {{editor system.requirements target="system.requirements"}}
               </span>
             </li>
             <li class="flexrow"><label class="item-sheet-label">Benefits</label>
               <span class="small-editor item-text-long-line">
-                {{editor system.benefits target="data.benefits" button=true owner=owner editable=editable}}
+                {{editor system.benefits target="system.benefits"}}
               </span>
             </li>
             <li class="flexrow"><label class="item-sheet-label">Disadvantages</label>
               <span class="small-editor item-text-long-line">
-                {{editor system.disadvantages target="data.disadvantages" button=true owner=owner editable=editable}}
+                {{editor system.disadvantages target="system.disadvantages"}}
               </span>
             </li>
           </ul>
