--- a/templates/item-spacecraftweaponmodification-sheet.html
+++ b/templates/item-spacecraftweaponmodification-sheet.html
@@ -14,8 +14,8 @@
           
           {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=data.stats isbase=true title="Modification Stats" header=true}}
 
-          <label class="generic-label">Description</label>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
