--- a/templates/item-utility-sheet.html
+++ b/templates/item-utility-sheet.html
@@ -45,8 +45,8 @@
           {{> "systems/foundry-fe2/templates/weapon-stats-section.html" stats=modification.data.stats  isfinal=false title="Modification" subtitle=modification.name}}
           {{/each}}
 
-          <label class="generic-label">Description</label>
-          {{editor system.description target="data.description" button=true owner=owner editable=editable}}
+          <h3>Description</h3>
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
