--- a/templates/item-weapon-sheet.html
+++ b/templates/item-weapon-sheet.html
@@ -73,7 +73,7 @@
           {{/each}}
         
           <h3>Description</h3>
-          {{editor system.description target="system.description" button=true owner=owner editable=editable}}
+          {{editor system.description target="system.description"}}
         </div>
 
     </section>
